Fixed Alignment Issue

--- a/johnnyladders.css
+++ b/johnnyladders.css
@@ -139,7 +139,7 @@ a:visited {
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	margin-left: -128px;
+	margin-left: -138px;
 	margin-top: 233px;
 }
 
@@ -152,6 +152,6 @@ a:visited {
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	margin-left: -128px;
+	margin-left: -138px;
 	margin-top: 233px;
 }
